@@ -19,12 +19,18 @@ repositories {
 }
 
 val mainClassName = "fr.civipol.civilio.Bootstrapper"
+val restarterClassName = "fr.civipol.civilio.Restarter"
 val javaFxVersion = "17.0.6"
 
 application {
     mainModule.set(moduleName)
     mainClass.set(mainClassName)
-    applicationDefaultJvmArgs = listOf("-Dprism.forceGPU=true", "-Dprism.lcdtext=false")
+    // Add the --add-exports argument here
+    applicationDefaultJvmArgs = listOf(
+            "-Dprism.forceGPU=true",
+            "-Dprism.lcdtext=false",
+            "--add-exports=javafx.base/com.sun.javafx.event=org.controlsfx.controls"
+    )
 }
 
 java {
@@ -39,7 +45,6 @@ javafx {
 
 val lombokVersion = "1.18.36"
 val daggerVersion = "2.56"
-val hibernateVersion = "6.6.12.Final"
 val geoToolsVersion = "28.1"
 
 dependencies {
@@ -52,8 +57,6 @@ dependencies {
 
     // MinIO Client
     implementation("io.minio:minio:8.5.7")
-
-//    implementation("com.fasterxml.jackson.core:jackson-databind:2.17.2")
 
     implementation("org.kordamp.ikonli:ikonli-javafx:12.4.0")
     implementation("org.kordamp.ikonli:ikonli-feather-pack:12.4.0")
@@ -81,6 +84,7 @@ dependencies {
 }
 
 jlink {
+    // This is for jlink's internal module path, not for runtime of your application
     addOptions(
             "--add-modules",
             "jakarta.cdi,jakarta.inject",
@@ -89,36 +93,45 @@ jlink {
             "--no-man-pages"
     )
     launcher {
+        val os = org.gradle.internal.os.OperatingSystem.current();
         name = rootProject.name
-        jvmArgs = listOf("-Djdk.gtk.version=2")
+        mainClass = mainClassName
+
+        var separator = "/"
+        var ext = ""
+        if (os.isWindows){
+            separator = "\\"
+            ext = ".exe"
+        }
+
+        jvmArgs = listOf("-Djpackage.app-path=$separator${listOf("\${APP_HOME}", "..", "CivilIO$ext").joinToString(separator)}")
     }
     jpackage {
-        if (System.getProperty("os.name").lowercase().contains("linux")) {
-            targetPlatformName = "linux"
-            installerType = "deb"
-        } else if (System.getProperty("os.name").lowercase().contains("windows")) {
-            targetPlatformName = "win"
-            installerType = "msi"
-            installerOptions.addAll(listOf(
-                    "--win-shortcut",
-                    "--win-menu"
-            ))
-        } else {
-            targetPlatformName = "darwin"
-            installerType = "pkg"
-        }
-        targetPlatform(targetPlatformName, System.getenv("JAVA_HOME"))
+        imageName = "CivilIO"
+        val os = org.gradle.internal.os.OperatingSystem.current()
         installerOptions.addAll(listOf(
-                "--description", project.description,
+                "--description", project.description.toString(),
                 "--vendor", "Civipol",
                 "--copyright", "Copyright 2025 Civipol",
-                "--resource-dir", "${layout.buildDirectory.get()}/resources/main"
+                "--name", "CivilIO"
         ))
-        imageOptions = listOf(
-                "--icon", "src/main/resources/img/Logo32x32.ico",
-                "--resource-dir", "src/main/resources"
-        )
+
+        when {
+            os.isWindows -> {
+                installerType = "msi"
+                installerOptions.addAll(listOf("--win-shortcut", "--win-menu"))
+            }
+
+            os.isLinux -> {
+                installerType = "deb"
+            }
+
+            os.isMacOsX -> {
+                installerType = "pkg"
+            }
+        }
     }
+
     addExtraDependencies("org.slf4j")
     addExtraDependencies("ch.qos.logback")
     addExtraDependencies("resources")
@@ -141,9 +154,10 @@ tasks.register("installerFileName") {
 
 tasks.register("installerFileContentType") {
     doLast {
+        val os = org.gradle.internal.os.OperatingSystem.current();
         val installerExt = when {
-            System.getProperty("os.name").contains("linux", ignoreCase = true) -> "deb"
-            System.getProperty("os.name").contains("windows", ignoreCase = true) -> "msi"
+            os.isLinux -> "deb"
+            os.isWindows -> "msi"
             else -> "pkg"
         }
 
@@ -187,12 +201,15 @@ tasks.processResources {
         expand(
                 "appName" to appName,
                 "appId" to appId,
-                "build" to build
+                "build" to build,
+                "projectName" to rootProject.name
         )
     }
 }
 
 tasks.compileJava {
+    // This is for compilation, which is different from runtime.
+    // The previous error was a runtime error.
     options.compilerArgs.addAll(listOf(
             "--add-modules", "jakarta.inject,java.naming,java.desktop"
     ))
@@ -204,3 +221,7 @@ tasks.named<Jar>("jar") {
         into("resources")
     }
 }
+
+//tasks.withType<JavaExec> {
+//    jvmArgs = listOf("-Dprism.forceGPU=true", "-Dprism.lcdtext=false")
+//}
